[project]
name = "exam-tutor"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "async-sqlalchemy>=1.0.0",
    "asyncpg>=0.30.0",
    "black>=24.10.0",
    "dishka>=1.4.2",
    "fastapi[standard]>=0.115.6",
    "greenlet>=3.1.1",
    "gunicorn>=23.0.0",
    "isort>=5.13.2",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.4",
    "uvicorn>=0.34.0",
]
