[project]
name = "exam-tutor"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "async-sqlalchemy>=1.0.0",
    "asyncpg>=0.30.0",
    "dishka>=1.4.2",
    "fastapi[standard]>=0.115.6",
    "greenlet>=3.1.1",
    "gunicorn>=23.0.0",
    "minio>=7.2.13",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.4",
]


[tool.ruff]
line-length = 88
lint.ignore = ["B008"]
lint.select = ["E", "F", "I", "B"]
lint.fixable = ["ALL"]
target-version = "py312"
exclude = ["alembic"]


[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["exam_tutor"]
skip = ["alembic"]
